# vidra

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: project-introduction.md
src/video_qa/: __init__.py  app.py  cli.py  config.py  runtime.py
src/video_qa/services/: __init__.py  application.py  context_builder.py  embeddings.py  pipeline_stages.py  processing_progress.py  processing_queue.py  qa_agent.py  queue_runtime.py  reporting.py  vector_index.py  video_context.py  video_processing_service.py  video_processor.py
src/video_qa/storage/: __init__.py  database.py  layout.py  schema.sql
src/video_qa/tools/: __init__.py  audio_transcriber.py  frame_extractor.py  image_captioner.py  object_detector.py
src/video_qa/ui/: __init__.py  handlers.py
tests/unit/: test_app.py  test_application_service.py  test_captioner.py  test_cli.py  test_config.py  test_context_builder.py  test_embeddings.py  test_frame_extractor.py  test_models.py  test_object_detector.py  test_pipeline_stages.py  test_processing_progress.py  test_processing_queue.py  test_progressive_processor.py  test_qa.py  test_storage.py  test_transcriber.py  test_ui_handlers.py  test_vector_index.py  test_video_context.py  test_video_io.py  test_video_processing_service.py
